--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,15 @@
 .MuiTableCell-head {
   font-weight: bold !important;
 }
+
+.MuiPaper-root
+  MuiPaper-elevation
+  MuiPaper-elevation4
+  MuiAppBar-root
+  MuiAppBar-colorPrimary
+  MuiAppBar-positionFixed
+  mui-fixed
+  css-1191obr-MuiPaper-root-MuiAppBar-root {
+  box-shadow: 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 4px 0px rgb(0 0 0 / 0%),
+    0px 1px 0px 0px rgb(0 0 0 / 0%);
+}
