--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,15 @@
   box-shadow: 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 4px 0px rgb(0 0 0 / 0%),
     0px 1px 0px 0px rgb(0 0 0 / 0%);
 }
+/* .MuiTypography-root {
+  background-color: #1976d2;
+} */
+.MuiTypography-h6 {
+  background-color: #1976d2;
+}
+.css-nr541q-MuiTypography-root-MuiDialogTitle-root {
+  background-color: #1976d2 !important;
+}
+/* .MuiDialogTitle-root {
+  background-color: #1976d2;
+} */
